--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,11 @@
-  <ol class="post-list">
-  {{#each posts as |post|}}
-  <li>
-    {{> post-info post }}
-  </li>
-  {{/each}}
-</ol>
+{{#each posts as |post|}}
+<div class="blog-section">
+    <div class="blog-header">
+        <a href="/post/{{post.id}}">{{post.title}}</a>
+        <p>posted by {{post.user.username}} at {{format_date post.created_at}}</p>
+    </div>
+    <p class="blog-text">
+        {{post.post_content}}
+    </p>
+</div>
+{{/each}}
