--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,34 +1,15 @@
-<article>
-  <a href="/dashboard"> &larr; Back to dashboard</a>
-  <h2>
-    Edit Post
-  </h2>
-  <form class="edit-post-form">
-    <div>
-      Title<input name="post-title" type="text" value="{{post.title}}" /></br>
-      Description<input name="post-content" type="text" value="{{post.content}}" />
-      <span>({{format_url post.post_url}})</span>
-    </div>
-    <div>
-      <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
-    </div>
-    <button type="submit">Save post</button>
-    <button type="button" class="delete-post-btn">Delete post</button>
-  </form>
-</article>
-
-<form class="comment-form">
-  <div>
-    <textarea name="comment-body"></textarea>
-  </div>
-
-  <div>
-    <button type="submit">add comment</button>
-  </div>
+<form class="update-form">
+    <h2>Update Post</h2>
+        <div class="form-contents">
+            <div>
+                <label class="text" for="update-title">Title</label>
+                <input type="text" id="update-title" name="update-title"/>
+            </div>
+            <div>
+                <button type="submit" id="update-post">Update Post</button>
+                <button type="submit" id="delete-post">Delete Post</button>
+            </div>
+        </div>
 </form>
-
-{{> comments post.comments}}
-
-<script src="/javascript/edit-post.js"></script>
-<script src="/javascript/delete-post.js"></script>
-<script src="/javascript/comment.js"></script>
+<script src="../public/javascript/edit-post.js"></script>
+<script src="../public/javascript/delete-post.js"></script>
