--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,33 +1,20 @@
 <form class="login-form">
-  <div>
-    <label for="email-login">email:</label>
-    <input type="text" id="email-login" />
-  </div>
-  <div>
-    <label for="password-login">password:</label>
-    <input type="password" id="password-login" />
-  </div>
-  <div>
-    <button type="submit">login</button>
-  </div>
+    <h2>Login</h2>
+        <div class="form-contents">
+            <div>
+                <label class="text" for="email-login">email:</label>
+                <input type="text" id="email-login" />
+            </div>
+            <div>
+                <label class="text" for="password-login">password:</label>
+                <input type="password" id="password-login" />
+            </div>
+            <div>
+                <button id="login" type="submit">login</button>
+            </div>
+            <div>
+                <a href="/signup" class="text" id="signup-instead">signup instead</a>
+            </div>
+        </div>
 </form>
-
-<form class="signup-form">
-  <div>
-    <label for="username-signup">username:</label>
-    <input type="text" id="username-signup" />
-  </div>
-  <div>
-    <label for="email-signup">email:</label>
-    <input type="text" id="email-signup" />
-  </div>
-  <div>
-    <label for="password-signup">password:</label>
-    <input type="password" id="password-signup" />
-  </div>
-  <div>
-    <button type="submit">signup</button>
-  </div>
-</form>
-
-<script src="/javascript/login.js"></script>
+<script src="../public/javascript/login.js"></script>
