--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,19 +1,34 @@
-{{> post-info post}}
-
+<div class="blog-section">
+    <div class="blog-header">
+        <h2>{{post.title}}</h2>
+        <p>posted by {{post.user.username}} at {{format_date post.created_at}}</p>
+    </div>
+    <p class="blog-text">
+        {{post.post_content}}
+    </p>
+</div>
+<div class="comment-section">
+    <h3>Comments:</h3>
+        {{#each post.comments}}
+        <section class="comments">
+            <p class="comment-title">From: {{user.username}} on {{format_date created_at}}</p>
+            <p>{{comment_text}}</p>
+        </section>
+        {{/each}}
+</div>
 {{#if loggedIn}}
+<h3 class="add-comment-title">Add Comment:</h3>
 <form class="comment-form">
-  <div>
-    <textarea name="comment-body"></textarea>
-  </div>
-
-  <div>
-    <button type="submit">add comment</button>
-  </div>
+        <div class="form-contents">
+            <div>
+                <textarea name="comment-body"></textarea>
+            </div>
+            <div>
+                <button id="comment" type="submit">+ Add Comment</button>
+            </div>
+        </div>
 </form>
 {{/if}}
-
-{{> comments post.comments}}
-
 {{#if loggedIn}}
-<script src="/javascript/comment.js"></script>
+<script src="../public/javascript/comment.js"></script>
 {{/if}}
