views and layouts

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -33,4 +33,4 @@
         {{/each}}
 </div>
 {{/if}}
-<script src="../public/javascript/add-post.js"></script>
+<script src="/js/add-post.js"></script>
