--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -30,5 +30,5 @@
 </form>
 {{/if}}
 {{#if loggedIn}}
-<script src="../public/javascript/comment.js"></script>
+<script src="/js/comment.js"></script>
 {{/if}}
