--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -11,5 +11,5 @@
             </div>
         </div>
 </form>
-<script src="../public/javascript/edit-post.js"></script>
-<script src="../public/javascript/delete-post.js"></script>
+<script src="/js/edit-post.js"></script>
+<script src="/js/delete-post.js"></script>
