--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,4 +17,4 @@
             </div>
         </div>
 </form>
-<script src="../public/javascript/login.js"></script>
+<script src="/js/login.js"></script>
