--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -21,4 +21,4 @@
             </div>
         </div>
 </form>
-<script src="../public/javascript/signup.js"></script>
+<script src="/js/signup.js"></script>
